--- a/src/components/Loader/Loader.module.css
+++ b/src/components/Loader/Loader.module.css
@@ -41,9 +41,9 @@
 
 @keyframes loading {
   from {
-    transform: rotate(0) scale(.7);
+    transform: rotate(0);
   }
   to {
-    transform: rotate(360deg) scale(1);
+    transform: rotate(360deg);
   }
 }
