--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -2,6 +2,64 @@
 
 }
 
+.product__header {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+
+.product__header-info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  max-width: 80%;
+}
+
+.product__button-exit {
+  position: relative;
+  padding: 0;
+  cursor: pointer;
+  width: 38px;
+  height: 38px;
+  box-shadow: 5px 10px 20px 0px rgba(211, 209, 216, 0.3);
+  background-color: var(--background-color);
+  border: none;
+  border-radius: 10px;
+}
+
+.product__button-exit:hover {
+  box-shadow: 5px 10px 20px 0px rgba(177, 175, 182, 0.3);
+}
+
+.product__button-exit::before {
+  content: '';
+  position: absolute;
+  background-image: url('/public/arrow-left.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 19px;
+  height: 19px;
+  top: 9px;
+  left: 9px;
+}
+
+.product__button-cart {
+  position: relative;
+  box-shadow: 0px 10px 30px 0px rgba(254, 114, 76, 0.2);
+}
+
+.product__button-cart::before {
+  content: '';
+  position: absolute;
+  background-image: url('/public/add-to-cart.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 17px;
+  height: 17px;
+  top: 12px;
+  left: 14px;
+}
+
 .product__container {
   display: flex;
   flex-direction: column;
