--- a/src/components/ProductCard/ProductCard.module.css
+++ b/src/components/ProductCard/ProductCard.module.css
@@ -1,13 +1,3 @@
-.product-card {
-  /* border-radius: 18px;
-  box-shadow: 18.214px 18.214px 36.429px 0px rgba(211, 209, 216, 0.25);
-  background-color: #FCFCFD; */
-}
-
-.product-card:hover {
-  /* box-shadow: 18.214px 18.214px 36.429px 0px rgba(158, 156, 161, 0.25); */
-}
-
 .product-card__link {
   display: flex;
   flex-direction: column;
@@ -59,7 +49,7 @@
   width: 34px;
   height: 34px;
   padding: 0;
-  background-image: url('/public/add-to-cart.svg');
+  background-image: url('/add-to-cart.svg');
   background-repeat: no-repeat;
   background-size: 15px;
   background-position: center;
@@ -89,7 +79,7 @@
   height: 10px;
   top: calc(50% - 5px);
   left: 30px;
-  background-image: url('/public/star.svg');
+  background-image: url('/star.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
