--- a/src/components/SearchInput/SearchInput.module.css
+++ b/src/components/SearchInput/SearchInput.module.css
@@ -5,7 +5,7 @@
 .search::before {
   content: '';
   position: absolute;
-  background-image: url('/public/search.svg');
+  background-image: url('/search.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -23,6 +23,7 @@
   font-weight: 400;
   line-height: normal;
   min-width: 256px;
+  width: 100%;
   padding: 16px 20px 16px 35px;
   border-radius: 10px;
   border: 1px solid #EFEFEF;
