--- a/src/layout/Auth/Auth.module.css
+++ b/src/layout/Auth/Auth.module.css
@@ -1,7 +1,7 @@
 .auth-layout {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  height: 100svh;
+  height: 100vh;
 }
 
 .logo__container {
@@ -16,4 +16,14 @@
 .logo__image {
   width: 100%;
   object-fit: cover;
+}
+
+@media screen and (max-width: 767px) {
+  .auth-layout {
+    grid-template-columns: 1fr;
+  }
+
+  .auth-layout__sidebar {
+    display: none;
+  }
 }
