--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -1,5 +1,8 @@
 .product {
-
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
 
 .product__header {
@@ -34,7 +37,7 @@
 .product__button-exit::before {
   content: '';
   position: absolute;
-  background-image: url('/public/arrow-left.svg');
+  background-image: url('/arrow-left.svg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 19px;
@@ -46,24 +49,19 @@
 .product__button-cart {
   position: relative;
   box-shadow: 0px 10px 30px 0px rgba(254, 114, 76, 0.2);
+  margin-top: auto;
 }
 
 .product__button-cart::before {
   content: '';
   position: absolute;
-  background-image: url('/public/add-to-cart.svg');
+  background-image: url('/add-to-cart.svg');
   background-repeat: no-repeat;
   background-size: cover;
   width: 17px;
   height: 17px;
   top: 12px;
   left: 14px;
-}
-
-.product__container {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
 }
 
 .product__category {
@@ -98,4 +96,16 @@
 
 .product__span {
   font-weight: 600;
+}
+
+@media screen and (max-width: 850px) {
+  .product__images {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .product__images {
+    grid-template-columns: 1fr;
+  }
 }
