--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -22,3 +22,9 @@
   flex-direction: column;
   gap: 5px;
 }
+
+@media screen and (max-width: 767px) {
+  .login__container {
+    padding: 0 30px;
+  }
+}
