--- a/src/pages/Error/Error.module.css
+++ b/src/pages/Error/Error.module.css
@@ -1,11 +1,14 @@
 .error-page {
+  height: 100vh;
+}
+
+.error-page__container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   gap: 30px;
-  padding: 20px;
+  height: 100%;
 }
 
 .error-page__image {
