--- a/src/pages/Product/Product.module.css
+++ b/src/pages/Product/Product.module.css
@@ -99,6 +99,14 @@
 }
 
 @media screen and (max-width: 850px) {
+  .product__header {
+    gap: 15px;
+  }
+
+  .product__heading {
+    font-size: 18px;
+  }
+
   .product__images {
     grid-template-columns: repeat(2, 1fr);
   }
