--- a/src/pages/Login/Login.module.css
+++ b/src/pages/Login/Login.module.css
@@ -23,6 +23,16 @@
   gap: 5px;
 }
 
+.form__input_error {
+  border-color: #ff0000;
+}
+
+.form__error {
+  margin: 0;
+  color: #ff0000;
+  text-align: center;
+}
+
 @media screen and (max-width: 767px) {
   .login__container {
     padding: 0 30px;
