--- a/src/pages/Register/Register.module.css
+++ b/src/pages/Register/Register.module.css
@@ -14,13 +14,23 @@
 .form {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 15px;
 }
 
 .form__input-wrapper {
   display: flex;
   flex-direction: column;
   gap: 5px;
+}
+
+.form__input_error {
+  border-color: #ff0000;
+}
+
+.form__error {
+  margin: 0;
+  color: #ff0000;
+  text-align: center;
 }
 
 @media screen and (max-width: 767px) {
